--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -33,6 +33,27 @@
         android:layout_height="wrap_content"
         android:text="@string/printerlist_test"/>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:padding="5dp"
+            android:gravity="center"
+            android:text="Print Count : "/>
+        <EditText
+            android:id="@+id/printer_copycount"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="3"
+            android:inputType="number"
+            android:hint="Example: 1"
+            android:text="1"/>
+    </LinearLayout>
+
     <Button
         android:id="@+id/printer_send"
         android:layout_width="match_parent"
