--- a/bluetoothhelper/src/main/res/layout/activity_printerlist.xml
+++ b/bluetoothhelper/src/main/res/layout/activity_printerlist.xml
@@ -64,9 +64,8 @@
     </android.support.design.widget.AppBarLayout>
 
     <LinearLayout
-        android:id="@+id/printerlist_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="center">
         <ProgressBar
